# swarm-opn-bind-updater

./: .gitignore  Makefile  README.md  opnsense_bind_companion.py  pyproject.toml  pytest.ini  requirements.txt
src/swarm_opn_bind_updater/: main.py
tests/: test_unit.py
